# img_classifier_service

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yaml  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/models/: base.py  detection.py  event.py  image.py
backend/src/: celery_app.py  fix_db.py  main.py
backend/src/app/api/: __init__.py
backend/src/app/api/routers/: auth.py  detection.py  image.py  user.py
backend/src/app/api/schemas/: detection.py  image.py  user.py
backend/src/app/core/: auth.py  cache.py  config.py
backend/src/app/db/: db_helper.py  init_object_type.py  save_result.py
backend/src/app/db/crud/: detection_crud.py  image_crud.py  user_crud.py
backend/src/app/models/: __init__.py  detection.py  image.py  user.py
backend/src/service/: auth_service.py  yolo.py
backend/src/tasks/: image_tasks.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Layout.css  Layout.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: ArchivePage.css  ArchivePage.tsx  AuthPage.css  LoginPage.tsx  RegisterPage.tsx  UploadPage.css  UploadPage.tsx
load_test/: Dockerfile  locustfile.py
